@@ -2,6 +2,7 @@ ikiwiki (3.20140228) UNRELEASED; urgency=medium
 
   * only_committed_changes could fail in a git repository merged
     with git merge -s ours.
+  * Remove google from openid selector, per http://xkcd.com/1361/
 
  -- Joey Hess <joeyh@debian.org>  Sat, 05 Apr 2014 19:08:22 -0400
 
